--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
     <meta charset="utf-8">
     <meta lang="en">
     <title>{{ page.title }}</title>
+    <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="/assets/css/main.css">
     <script src="/assets/js/scripts.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
