--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -293,6 +293,7 @@ br {
         .picture {
             grid-area: picture;
             padding: 7vw;
+            font-size: 14px;
         }
 
             .picture img {
