--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
     <title>{{ page.title }}</title>
     <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="/assets/css/main.css">
+    <link href="{{ "/assets/css/main.css" | prepend: site.baseurl }}?{{ site.time | date: '%s%N' }}" rel="stylesheet">
     <script src="/assets/js/scripts.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
