--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,10 @@
     <meta lang="en">
     <title>{{ page.title }}</title>
     <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="{{ "/assets/css/main.css" | prepend: site.baseurl }}?{{ site.time | date: '%s%N' }}" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
     <script src="/assets/js/scripts.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
