--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,10 @@
     <title>{{ page.title }}</title>
     <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="/assets/css/main.css" rel="stylesheet">
+    <meta name="description"   content="This is the official webpage of Gianluca Orlando, Assistant Professor in Mathematical Analysis at the Department of Mechanics, Mathematics & Management of Polytechnic of Bari. Gianluca Orlando's research focuses on Calculus of Variations, Gamma-convergence, semicontinuity and relaxation problems, applications to Fracture Mechanics (evolution for fracture, damage, plasticity, fatigue models) and Materials Science. He is also interested in the variational discrete-to-continuum analysis of spin systems (XY model, N-clock model, frustrated systems). Currently funded by Research for innovation - REFIN of Regione Puglia. 
+
+    Questa è la pagina web ufficiale di Gianluca Orlando, Ricercatore a Tempo Determinato di tipo A in Analisi Matematica presso il Dipartimento di Meccanica, Matematica e Management (DMMM) del Politecnico di Bari (PoliBa). La ricerca di Gianluca Orlando è focalizzata sul calcolo delle variazioni, Gamma-convergenza, problemi di semicontinuità e rilassamento, applicazioni alla Meccanica delle Fratture (evoluzione per modelli di frattura, danno, plasticità, fatica) e Scienze dei Materiali. È anche interessato all'analisi variazionale dal discreto al continuo per sistemi di spin (modello XY, modello N-clock, sistemi frustrati). Al momento è finanziato dal programma Research for innovation - REFIN della Regione Puglia.">
+    <meta name="keywords" content="Orlando, Gianluca, Politecnico di Bari, PoliBa, Dipartimento di Meccanica, Matematica e Management, DMMM, Analisi Matematica, didattica, ingegneria gestional, calcolo delle probabilità e statistica">
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
